--- a/chat.html
+++ b/chat.html
@@ -1,36 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chat Dimitri</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chat Dimitri 🌍</title>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<!-- Firebase compat SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
-  <style>
-    body { font-family: Arial,sans-serif; background:#f5f5f5; display:flex; flex-direction:column; align-items:center; margin:0; }
-    h2 { margin-top:20px; color:#333; }
-    #loginBtn, #logoutBtn { background:#4CAF50; color:white; border:none; padding:10px 15px; cursor:pointer; border-radius:5px; margin:0 5px; }
-    #loginBtn:hover, #logoutBtn:hover { background:#45a049; }
-    #chatWindow { display:flex; flex-direction:column; width:350px; height:500px; border:2px solid #4CAF50; border-radius:12px; background:white; overflow:hidden; box-shadow:0 4px 12px rgba(0,0,0,0.2); margin-bottom:20px; }
-    #chatMessages { flex:1; padding:10px; overflow-y:auto; display:flex; flex-direction:column; font-size:0.9em; }
-    #chatMessages p { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; }
-    .userMsg { background:#e0f7e9; align-self:flex-end; }
-    .botMsg { background:#f0f0f0; align-self:flex-start; }
-    .otherMsg { background:#fff8dc; align-self:flex-start; }
-    #chatInput { display:flex; border-top:1px solid #ddd; }
-    #chatInput input { flex:1; border:none; padding:10px; outline:none; }
-    #chatInput button { background:#4CAF50; color:white; border:none; padding:10px 15px; cursor:pointer; }
-    #chatInput button:hover { background:#45a049; }
-    .time { font-size:0.7em; color:#555; margin-left:5px; }
-  </style>
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+}
+h2 { margin-top: 20px; color: #333; }
+#loginBtn, #logoutBtn {
+  background: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 0 5px;
+}
+#loginBtn:hover, #logoutBtn:hover { background: #45a049; }
+#chatWindow {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  height: 500px;
+  border: 2px solid #4CAF50;
+  border-radius: 12px;
+  background: white;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  margin-bottom: 20px;
+}
+#chatMessages {
+  flex: 1;
+  padding: 10px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9em;
+}
+#chatMessages p {
+  margin: 5px 0;
+  padding: 8px;
+  border-radius: 8px;
+  max-width: 80%;
+  word-wrap: break-word;
+}
+.userMsg { background: #e0f7e9; align-self: flex-end; }
+.botMsg { background: #f0f0f0; align-self: flex-start; }
+.otherMsg { background: #fff8dc; align-self: flex-start; }
+#chatInput { display: flex; border-top: 1px solid #ddd; }
+#chatInput input {
+  flex: 1;
+  border: none;
+  padding: 10px;
+  outline: none;
+}
+#chatInput button {
+  background: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+#chatInput button:hover { background: #45a049; }
+.time { font-size: 0.7em; color: #555; margin-left: 5px; }
+</style>
 </head>
+
 <body>
 
-<h2>Chat Dimitri</h2>
+<h2>💬 Chat Dimitri Global</h2>
 <div style="text-align:center; margin-bottom:10px;">
   <button id="loginBtn">Login com Google</button>
   <button id="logoutBtn" style="display:none;">Logout</button>
@@ -45,72 +96,80 @@
 </div>
 
 <script>
-  // ======= CONFIGURAÇÃO FIREBASE =======
-   const firebaseConfig = {
+  // === CONFIGURAÇÃO FIREBASE ===
+  const firebaseConfig = {
     apiKey: "AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
     authDomain: "dimitry-rusian.firebaseapp.com",
     databaseURL: "https://dimitry-rusian-default-rtdb.firebaseio.com",
     projectId: "dimitry-rusian",
-    storageBucket: "dimitry-rusian.firebasestorage.app",
+    storageBucket: "dimitry-rusian.appspot.com",
     messagingSenderId: "449029666805",
     appId: "1:449029666805:web:feaf575a7b7e6f234a52bc",
     measurementId: "G-6DLM398X84"
   };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.database();
 
-  // Elementos
   const loginBtn = document.getElementById("loginBtn");
   const logoutBtn = document.getElementById("logoutBtn");
   const msgInput = document.getElementById("msgInput");
   const sendBtn = document.getElementById("sendBtn");
   const chatMessages = document.getElementById("chatMessages");
 
-  // ===== LOGIN GOOGLE =====
+  // === LOGIN COM GOOGLE ===
   loginBtn.addEventListener("click", () => {
     const provider = new firebase.auth.GoogleAuthProvider();
-    auth.signInWithPopup(provider);
+    auth.signInWithPopup(provider)
+      .then(() => console.log("✅ Login efetuado"))
+      .catch(err => alert("Erro ao logar: " + err.message));
   });
 
-  logoutBtn.addEventListener("click", () => {
-    auth.signOut();
-  });
+  logoutBtn.addEventListener("click", () => auth.signOut());
 
   auth.onAuthStateChanged(user => {
-    if(user){
+    if (user) {
       loginBtn.style.display = "none";
       logoutBtn.style.display = "inline-block";
+      console.log("Usuário logado:", user.displayName);
     } else {
       loginBtn.style.display = "inline-block";
       logoutBtn.style.display = "none";
+      console.log("Nenhum usuário logado");
     }
   });
 
-  // ===== ENVIO DE MENSAGENS =====
-  function sendMessage(){
+  // === ENVIAR MENSAGEM ===
+  function sendMessage() {
     const msg = msgInput.value.trim();
-    if(!msg) return;
+    if (!msg) return;
     const user = auth.currentUser?.displayName || "Anônimo";
 
     db.ref('chatGlobal').push({
       user: user,
       text: msg,
       timestamp: Date.now()
-    });
+    })
+    .then(() => {
+      console.log("💬 Mensagem enviada!");
+      msgInput.value = "";
+    })
+    .catch(err => console.error("Erro ao enviar:", err));
 
-    msgInput.value = "";
+    // Envia resposta automática do bot
     setTimeout(() => sendBotResponse(msg), 600);
   }
 
   sendBtn.addEventListener("click", sendMessage);
-  msgInput.addEventListener("keypress", e => { if(e.key==="Enter") sendMessage(); });
+  msgInput.addEventListener("keypress", e => {
+    if (e.key === "Enter") sendMessage();
+  });
 
-  // ===== BOT SIMPLES =====
-  function sendBotResponse(userMsg){
+  // === BOT AUTOMÁTICO ===
+  function sendBotResponse(userMsg) {
     const botText = getBotResponse(userMsg);
-    if(!botText) return;
+    if (!botText) return;
     db.ref('chatGlobal').push({
       user: "🤖 Dimitri",
       text: botText,
@@ -118,20 +177,25 @@
     });
   }
 
-  function getBotResponse(msg){
+  function getBotResponse(msg) {
     msg = msg.toLowerCase();
-    if(msg.includes("olá")||msg.includes("oi")) return "Olá! Como vai?";
-    if(msg.includes("russo")) return "Posso te ajudar a aprender russo 🇷🇺";
-    if(msg.includes("obrigado")) return "De nada! 😊";
+    if (msg.includes("olá") || msg.includes("oi")) return "Olá! Como vai?";
+    if (msg.includes("russo")) return "Posso te ajudar a aprender russo 🇷🇺";
+    if (msg.includes("obrigado")) return "De nada! 😊";
     return "Ainda estou aprendendo... pode repetir?";
   }
 
-  // ===== RECEBER MENSAGENS EM TEMPO REAL =====
+  // === RECEBER MENSAGENS EM TEMPO REAL ===
   db.ref('chatGlobal').orderByChild('timestamp').on('child_added', snapshot => {
     const msg = snapshot.val();
     const p = document.createElement("p");
-    p.className = msg.user===auth.currentUser?.displayName ? "userMsg" : (msg.user==="🤖 Dimitri" ? "botMsg" : "otherMsg");
-    const time = new Date(msg.timestamp).toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
+    const currentUser = auth.currentUser?.displayName;
+
+    if (msg.user === currentUser) p.className = "userMsg";
+    else if (msg.user === "🤖 Dimitri") p.className = "botMsg";
+    else p.className = "otherMsg";
+
+    const time = new Date(msg.timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
     p.innerHTML = `<strong>${msg.user}:</strong> ${msg.text} <span class="time">${time}</span>`;
     chatMessages.appendChild(p);
     chatMessages.scrollTop = chatMessages.scrollHeight;
