--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chat Dimitri 🌍</title>
+<title>чат🌍</title>
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
@@ -165,8 +165,8 @@ footer {
 
 <body>
 
-<header>💬 Chat Dimitri Global</header>
-<button id="modeToggle">🌙 Dark/Light</button>
+<header>💬 чат Димитрий</header>
+<button id="modeToggle">🌙 </button>
 
 <div id="topBar">
   <button id="backBtn" onclick="window.location.href='index.html'">⬅ Voltar</button>
