--- a/chat.html
+++ b/chat.html
@@ -194,9 +194,9 @@ footer {
 
 <body>
 
-<header>💬 чат Димитрий</header>
+<header>чат Димитрий</header>
 
-<button id="modeToggle">🌙 Dark/Light</button>
+<button id="modeToggle">🌙</button>
 
 <div id="topBar">
   <button id="backBtn" onclick="window.location.href='index.html'">⬅ Voltar</button>
