--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ body.dark-mode footer {
     <a href="index.html">📈 Selecionar</a>
     <a href="exercicio.html">📝 Exercícios</a>
     <a href="jogo.html">🎨 Jogos</a>
-    <a href="#">ℹ Quem somos</a>
+    <a href="chat.html">💬 Chats</a>
   </nav>
   <div class="mascote"> Dimitry</div>
 </aside>
@@ -849,3 +849,4 @@ document.getElementById('modoBtn').addEventListener('click', () => {
 
 </body>
 </html>
+
