--- a/index.html
+++ b/index.html
@@ -844,10 +844,11 @@ document.getElementById('modoBtn').addEventListener('click', () => {
 <script src="overlay.js"></script>
 
 <footer id="siteFooter">
-  <p>>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</p>
+  <p>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</p>
 </footer>
 
 </body>
 </html>
+
 
 
